对手机拍照文件传送进行优化